updated hit count logic for constants